--- a/analisis/calculo_renta_hidrocarburos.Rmd
+++ b/analisis/calculo_renta_hidrocarburos.Rmd
@@ -4960,262 +4960,13 @@ writexl::write_xlsx(list("TG indice flujo pozos"= tasa_ganancia_rama_flujo,
                     path = "resultados/tasa de ganancia y renta hidrocarburífera.xlsx")
 
 
-print("Mateo, el código terminó de correr")
+print("El código terminó de correr")
 
 ```
 
 
 
-# Pendientes 
-
-Recortes viejos que no se pq se realizaron
-
-<!-- ### Renta por exportaciones a tipo de cambio sobrevaluado -->
-<!-- #### Crudo -->
-<!-- ```{r message=FALSE, warning=FALSE} -->
-<!-- renta_tcp_crudo <- comex_crudo_sesco %>% -->
-<!--   filter(variable == "exportacion", -->
-<!--          unidad == "usd") %>% -->
-<!--   rename(expo_crudo_usd = valor) %>% -->
-<!--   ungroup() %>% -->
-<!--   select(-c(variable, unidad, producto)) %>% -->
-<!--   left_join(tcp_anual, by = "anio") %>% -->
-<!--   mutate(renta_sobrevaluacion_crudo_pesos = expo_crudo_usd*TCP - expo_crudo_usd*TCC ) -->
-<!-- renta_tcp_crudo -->
-<!-- ``` -->
-
-<!-- #### Gas -->
-<!-- ```{r message=FALSE, warning=FALSE} -->
-<!-- renta_tcp_gas <- comex_gas %>% -->
-<!--   filter(variable == "exportacion", -->
-<!--          unidad == "usd") %>% -->
-<!--   rename(expo_gas_usd = valor) %>% -->
-<!--   ungroup() %>% -->
-<!--   select(-c(variable, unidad, producto)) %>% -->
-<!--   left_join(tcp_anual, by = "anio") %>% -->
-<!--   mutate(renta_sobrevaluacion_gas_pesos = expo_gas_usd*TCP - expo_gas_usd*TCC ) -->
-<!-- renta_tcp_gas -->
-<!-- ``` -->
-
-
-
-<!-- ### Renta por regalías -->
-<!-- ```{r message=FALSE, warning=FALSE} -->
-<!-- renta_regalias <- regalias %>% -->
-<!--   left_join(tcp_anual, by = "anio") %>% -->
-<!--   mutate(regalias_pesos = case_when(moneda == "usd" ~ regalias_total * TCC, -->
-<!--                                     T ~ regalias_total), -->
-<!--          moneda = case_when(moneda == "usd" ~ "ars", -->
-<!--                             T ~ moneda)) %>% -->
-<!--   group_by(anio) %>% -->
-<!--   summarise(regalias_pesos = sum(regalias_pesos)) -->
-<!-- renta_regalias -->
-<!-- ``` -->
-
-<!-- ## Renta total -->
-<!-- ```{r message=FALSE, warning=FALSE} -->
-<!-- renta_jk <- read_delim("renta_jk.csv", ";", -->
-<!--     escape_double = FALSE, trim_ws = TRUE) %>% -->
-<!--   rename(anio = X1) -->
-
-<!-- # renta_hidrocarburos <- renta_regalias %>% -->
-<!-- #   left_join(renta_tcp_gas %>% -->
-<!-- #               select(anio, renta_sobrevaluacion_gas_pesos)) %>% -->
-<!-- #   left_join(renta_tcp_crudo %>% -->
-<!-- #               select(anio, renta_sobrevaluacion_crudo_pesos))  %>% -->
-<!-- #   left_join(renta_dif_precios_crudo %>% -->
-<!-- #               select(anio, renta_dif_precios_crudo_pesos)) %>% -->
-<!-- #   left_join(renta_dif_precios_gas %>% -->
-<!-- #               select(anio, renta_dif_precios_gas_pesos))  %>% -->
-<!-- #   mutate(renta_total_pesos = sum(regalias_pesos, -->
-<!-- #                                  renta_sobrevaluacion_gas_pesos, renta_sobrevaluacion_crudo_pesos, -->
-<!-- #                                  renta_dif_precios_crudo_pesos, renta_dif_precios_gas_pesos, -->
-<!-- #                                  na.rm = T)) %>% -->
-<!-- #   left_join(renta_jk) %>% -->
-<!-- #   mutate(diferencia = (renta_total_pesos/renta_jk) - 1) -->
-<!-- # -->
-
-<!-- renta_hidrocarburos <- renta_regalias %>% -->
-<!--   left_join(renta_tcp_gas) %>% -->
-<!--   left_join(renta_tcp_crudo) %>% -->
-<!--   left_join(renta_dif_precios_crudo) %>% -->
-<!--   left_join(renta_dif_precios_gas)  %>% -->
-<!--   mutate(renta_total_pesos = sum(regalias_pesos, -->
-<!--                                  renta_sobrevaluacion_gas_pesos, renta_sobrevaluacion_crudo_pesos, -->
-<!--                                  renta_dif_precios_crudo_pesos, renta_dif_precios_gas_pesos, -->
-<!--                                  na.rm = T)) %>% -->
-<!--   left_join(renta_jk) %>% -->
-<!--   mutate(diferencia = (renta_total_pesos/renta_jk) - 1) -->
-
-<!-- renta_hidrocarburos -->
-
-<!-- # write.csv(renta_hidrocarburos, "renta_hidrocarburos.csv") -->
-
-
-<!-- ``` -->
-
-
-<!-- ```{r message=FALSE, warning=FALSE} -->
-<!-- graf_renta <- renta_hidrocarburos %>% -->
-<!--   gather(., -->
-<!--          key = variable, -->
-<!--          value = valor, -->
-<!--          2:ncol(.)) %>% -->
-<!--   filter(!(variable %in% c("renta_total_pesos", "renta_jk", "diferencia"))) %>% -->
-<!--   ggplot(aes(anio, valor, fill = variable))+ -->
-<!--   geom_col(position = "stack") -->
-<!-- graf_renta -->
-<!-- ``` -->
-
-Recorte de estimacion de kta a partir de pozos
-<!-- #### KTA. Con stock de pozos en extracción efectiva -->
-<!-- ```{r eval=FALSE, message=FALSE, warning=FALSE, include=FALSE} -->
-<!-- #KTA -->
-<!-- kta_anio_base_bolsar <- (stock_rama %>%  -->
-<!--   filter(variable == "KTA" & sector == "produccion") %>% -->
-<!--   select(anio, unidad, KTA = valor))$KTA[10] -->
-
-<!-- kta_anio_base_afip <- (stock_rama %>%  -->
-<!--   filter(variable == "KTA" & sector == "extraccion_petroleo_gas") %>% -->
-<!--   select(anio, unidad, KTA = valor))$KTA[6] -->
-
-<!-- pozos_stock_kta <- stock_rama %>%  -->
-<!--   filter(variable == "KTA" & sector %in% c("produccion", "extraccion_petroleo_gas")) %>% -->
-<!--   select(anio, unidad, KTA = valor, fuente) %>%  -->
-<!--   full_join(pozos_iapg_centenario %>%  -->
-<!--               mutate( indice_pozos_06 = generar_indice(serie= totales , -->
-<!--                                         fecha = anio, -->
-<!--                                         fecha_base = 2006)) %>%  -->
-<!--               select(anio, indice_pozos_06))  -->
-
-<!-- ejercicio_fd_stock <- pozos_stock_kta %>% -->
-<!--   group_by(anio, unidad, fuente) %>% -->
-<!--   summarise(kta_estimado_bolsar = kta_anio_base_bolsar * indice_pozos_06, -->
-<!--             kta_estimado_afip = kta_anio_base_afip * indice_pozos_06)  %>%  -->
-<!--   ungroup() %>%  -->
-<!--   select(-c(unidad,  fuente)) %>%  -->
-<!--   gather(key =variable, -->
-<!--                       value = valor,  -->
-<!--                       2:3) %>%  -->
-<!--   bind_rows( stock_rama %>%  -->
-<!--                filter(variable == "KTA" & -->
-<!--                         sector %in% c("produccion", "extraccion_petroleo_gas")) %>% -->
-<!--                select(anio,  variable = fuente, valor )) %>%  -->
-<!--   mutate(unidad = "Millones de pesos 2018") -->
-<!-- # ejercicio_fd_stock -->
-
-
-<!-- graf_ejercicio_fg <- ejercicio_fd_stock %>%  -->
-<!--   ggplot(aes(anio, valor, color= variable))+ -->
-<!--   geom_line()+ -->
-<!--   scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+ -->
-<!--   labs(title = "KTA a partir de balances, AFIP y estimado por indice de stock pozos (base 2006)", -->
-<!--        y = "Millones de pesos de 2018")+ -->
-<!--   theme(legend.position = "bottom") -->
-
-
-<!-- cor(x= pozos_stock_kta$KTA[pozos_stock_kta$fuente == "AFIP"] ,  -->
-<!--     y= pozos_stock_kta$indice_pozos_06[pozos_stock_kta$fuente == "AFIP"], -->
-<!--      method = "pearson", use = "complete.obs") -->
-<!-- # 0.5488576 -->
-
-<!-- cor(x= pozos_stock_kta$KTA[pozos_stock_kta$fuente == "Bolsar"] ,  -->
-<!--     y= pozos_stock_kta$indice_pozos_06[pozos_stock_kta$fuente == "Bolsar"], -->
-<!--      method = "pearson", use = "complete.obs") -->
-<!-- # 0.8875074 -->
-
-<!-- #sin filtrar la variable de fuente -->
-<!-- # 0.4179967 con KTA -->
-<!-- # 0.4241663 con ppye -->
-
-<!-- graf_ejercicio_fg -->
-<!-- ``` -->
-
-
-<!-- #### KTA. Con pozos terminados por año -->
-<!-- ```{r eval=FALSE, message=FALSE, warning=FALSE, include=FALSE} -->
-<!-- #KTA -->
-<!-- pozos_flujo_kta <- stock_rama %>%  -->
-<!--   filter(variable == "KTA" & sector %in% c("produccion", "extraccion_petroleo_gas")) %>% -->
-<!--   select(anio, unidad, KTA = valor, fuente) %>%  -->
-<!--   full_join(comparacion_pozos %>%  -->
-<!--               mutate( indice_pozos_06 = generar_indice(serie= pozos_cargados_sec_energia , -->
-<!--                                         fecha = anio, -->
-<!--                                         fecha_base = 2006)) %>%  -->
-<!--               select(anio, indice_pozos_06))  -->
-
-<!-- ejercicio_fd_flujo <-pozos_flujo_kta %>% -->
-<!--   group_by(anio, unidad, fuente) %>% -->
-<!--   summarise(kta_estimado_bolsar = kta_anio_base_bolsar * indice_pozos_06, -->
-<!--             kta_estimado_afip = kta_anio_base_afip * indice_pozos_06)  %>%  -->
-<!--   ungroup() %>%  -->
-<!--   select(-c(unidad,  fuente)) %>%  -->
-<!--   gather(key =variable, -->
-<!--                       value = valor,  -->
-<!--                       2:3) %>%  -->
-<!--   bind_rows(stock_rama %>%  -->
-<!--                filter(variable == "KTA" & -->
-<!--                         sector %in% c("produccion", "extraccion_petroleo_gas")) %>% -->
-<!--               select(anio,  variable = fuente, valor ) %>%  -->
-<!--               mutate(variable = case_when(variable == "AFIP" ~ "KTA_AFIP", -->
-<!--                                           variable =="Bolsar" ~ "KTA_Bolsar", -->
-<!--                                           T ~ variable)))%>%  -->
-<!--   mutate(unidad = "Millones de pesos 2018") -->
-
-
-<!-- writexl::write_xlsx(list("con pozos perforados por año"= ejercicio_fd_flujo,  -->
-<!--                          "con stock de pozos" = ejercicio_fd_stock), path = "resultados/estimacion de stock a partir de pozos.xlsx") -->
-
-<!-- #Sin filtar la variable fuente -->
-<!-- cor(x= pozos_flujo_kta$KTA, y=pozos_flujo_kta$indice_pozos_06, -->
-<!--      method = "pearson", use = "complete.obs") -->
-<!-- # 0.3066807 con KTA -->
-<!-- # 0.3523185 con ppye -->
-
-<!-- cor(x= pozos_flujo_kta$KTA[pozos_flujo_kta$fuente == "AFIP"] ,  -->
-<!--     y= pozos_flujo_kta$indice_pozos_06[pozos_flujo_kta$fuente == "AFIP"], -->
-<!--      method = "pearson", use = "complete.obs") -->
-<!-- # -0.1516902 -->
-
-<!-- cor(x= pozos_flujo_kta$KTA[pozos_flujo_kta$fuente == "Bolsar"] ,  -->
-<!--     y= pozos_flujo_kta$indice_pozos_06[pozos_flujo_kta$fuente == "Bolsar"], -->
-<!--      method = "pearson", use = "complete.obs") -->
-<!-- # 0.5697615 -->
-
-
-<!-- graf_ejercicio_fg <- ejercicio_fd_flujo %>%  -->
-<!--   ggplot(aes(anio, valor, color= variable))+ -->
-<!--   geom_line()+ -->
-<!--   scale_y_continuous(labels=function(x) format(x, big.mark = ".", scientific = FALSE))+ -->
-<!--   labs(title = "KTA a partir de balances, AFIP y estimado por indice de flujo pozos (base 2006)", -->
-<!--        y = "Millones de pesos de 2018")+ -->
-<!--   theme(legend.position = "bottom") -->
-<!-- # ggplotly(graf_ejercicio_fg) -->
-<!-- graf_ejercicio_fg -->
-<!-- ``` -->
 
 
 
 
-
-
-### Calculos de otros
-Buscar: 
-- Montamat
-- Einstoss Tinto A. Análisis de la Evolución reciente de la Renta Petrolera en Argentina CECE
-
-### Producción
- * ver cantidades vendidas y no producidas. buscar si existe serie de existencias
- 
-### Exportacion
-  # fijarse de lo de betania
-  
-### Precios
-  #notas sobre la revisión de excels betania:
-  * Diferencial de precios combustibles y crudo - ARG EEUU WTI: el precio interno en pesos parece resultante de la división entre valor y cantidad. Luego el precio interno en dolares esta en barriles pero no se sabe como se calculo ni fuente
-  * Serie larga cursos de renta 1963-2011: el precio interno de la solapa recalculo diferencial de precios, no es ni sesco ni mecon pero da muy similar
-  
-  #precio gas bolivia: fuente de bolivia. ver el tema de transporte
-  #precio de referencia de petroleo: escalante? otro?
-  
-  # Subsidios: JK usó fuente EJES
