--- a/analisis/neuquen.Rmd
+++ b/analisis/neuquen.Rmd
@@ -14,11 +14,12 @@ conversor_m3bbl_q <- function(x) {x * 6.2898}
 produccion_provincia <- read_excel("C:/Archivos/repos/hidrocarburos/analisis/data/produccion_provincia.xlsx", 
     skip = 10) %>%
   rename(anio = "AÑO", mes = "MES") %>% 
-  mutate(unidad = "m3",
+  mutate(unidad = "m3",         
+         variable = "Producción de Crudo",         
          anio =zoo::na.locf(anio),
          fecha = as.Date(parse_date_time(paste0(anio, mes), orders = "ym"))) %>% 
-  select(fecha, mes, anio, unidad, everything(.)) %>% 
-  group_by(fecha, mes, anio, unidad) %>% 
+  select(fecha, mes, anio, variable, unidad, everything(.)) %>% 
+  group_by(fecha, mes, anio, variable, unidad) %>% 
   mutate_all(conversor_m3bbl_q) %>%
   ungroup() %>% 
   mutate(unidad = "barriles")
@@ -27,10 +28,11 @@ produccion_provincia
 precio_tipo_crudo <- read_excel("data/precio_tipo_crudo.xlsx", skip = 12) %>% 
   rename(anio = "AÑO", mes = "MES") %>% 
   mutate(unidad = "USD/m3",
+         variable = "Precio Mercado Interno del Crudo ",
          anio =zoo::na.locf(anio),
          fecha = as.Date(parse_date_time(paste0(anio, mes), orders = "ym"))) %>% 
-  select(fecha, mes, anio, unidad, everything(.)) %>% 
-  group_by(fecha, mes, anio, unidad) %>% 
+  select(fecha, mes, anio, variable, unidad, everything(.)) %>% 
+  group_by(fecha, mes, anio, variable, unidad) %>% 
   mutate_all(conversor_m3bbl_p) %>%
   ungroup() %>% 
   mutate(unidad = "USD/barriles")
@@ -40,17 +42,20 @@ precio_tipo_crudo
 precio_provincia <- read_excel("data/precio_provincia.xlsx", skip = 12) %>% 
   rename(anio = "AÑO", mes = "MES") %>% 
   mutate(unidad = "USD/m3",
+         variable = "Precio Mercado Interno del Crudo ",
          anio =zoo::na.locf(anio),
          fecha = as.Date(parse_date_time(paste0(anio, mes), orders = "ym"))) %>% 
-  select(fecha, mes, anio, unidad, everything(.)) %>% 
-  group_by(fecha, mes, anio, unidad) %>% 
+  select(fecha, mes, anio, variable, unidad, everything(.)) %>% 
+  group_by(fecha, mes, anio, variable, unidad) %>% 
   mutate_all(conversor_m3bbl_p) %>%
   ungroup() %>% 
   mutate(unidad = "USD/barriles")
 precio_provincia
 
-writexl::write_xlsx(x = list(produccion_provincia, precio_provincia, precio_tipo_crudo),
-                      path = "resultados/neuquen/produccion_y_precios_x_provincia(Regalias).xlsx")
+writexl::write_xlsx(x = list("produccion_provincia" = produccion_provincia, 
+                            "precio_provincia"  = precio_provincia, 
+                            "precio_tipo_crudo" =precio_tipo_crudo),
+                      path = "resultados/neuquen/produccion_y_precios_x_provincia (Base Regalias).xlsx")
 
 ```
 
